--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-buteo-sync-plugins-contacts (0.1-0ubuntu1) vivid; urgency=medium
+buteo-sync-plugins-contacts (0.1-0ubuntu1) UNRELEASED; urgency=medium
 
   * Initial package
 
