--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+buteo-sync-plugins-contacts (0.2+ubports) vivid; urgency=medium
+
+  * Imported to UBports
+
+ -- UBports auto importer <infra@ubports.com>  Mon, 16 Oct 2017 18:21:15 +0200
+
 buteo-sync-plugins-contacts (0.1+16.10.20160818.1-0ubuntu1) yakkety; urgency=medium
 
   * Update build dep.
