--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+buteo-sync-plugins-contacts (0.2+ubports1) xenial; urgency=medium
+
+  * No change rebuild for xenial 
+
+ -- Dan Chapman <dan@ubports.com>  Sun, 07 Jan 2018 08:34:16 +0000
+
 buteo-sync-plugins-contacts (0.2+ubports) vivid; urgency=medium
 
   * Imported to UBports
