--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+buteo-sync-plugins-contacts (0.2+ubports2) xenial; urgency=medium
+
+  * No change rebuild for qtpim5 change
+
+ -- Dalton Durst <dalton@ubports.com>  Wed, 13 Jun 2018 11:13:54 -0500
+
 buteo-sync-plugins-contacts (0.2+ubports1) xenial; urgency=medium
 
   * No change rebuild for xenial 
